<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="welcome_text">Welcome to HealthEats</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Already have an account ?</string>
    <string name="click_here"><u>Click Here</u></string>
    <string name="title">Segera lihat rekomendasi resep makananmu hari ini</string>
    <string name="description_login">Enter your account</string>
    <string name="login">Login</string>
    <string name="move_to_regis">Not have an account ?</string>
    <string name="click_here_register">Click here</string>
    <string name="not_found">get your recipe</string>
    <string name="username">username</string>
    <string name="describe">Deskripsi makanan\n</string>
    <string name="search">Search</string>
    <string name="Search">search recipe\n</string>
    <string name="search_hint">name recipe\n</string>
    <string name="logout">logout</string>
    <string name="MainActivity">Halaman Main</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_Profile">Profile</string>
    <string name="title_activity_bottom_bar_navigation">BottomBarNavigation</string>
    <string name="nasgor">Nasi goreng timun</string>
    <string name="sayur">sayur bayam\n</string>
    <string name="decnasi">nasi goreng asli indonesia</string>
    <string name="decsayur">"sayur bayam sangat mudah untuk dibuat "</string>
    <string name="contoh_textPanjang">
        1. Definisi\n\n
Aplikasi HealthEats  adalah aplikasi kesehatan yang dikembangkan oleh Tim CH2-PS313 dari Bangkit Akademi yang dapat mendeteksi penyakit tidak menular dengan tingkat akurasi hingga 93% dan juga dapat menyimpan data pribadi pengguna.\n\n
Pengguna adalah orang yang menggunakan Aplikasi HealthEats.\n
Data Pribadi adalah data yang dapat diidentifikasikan sebagai milik pengguna, termasuk namun tidak terbatas pada nama, alamat, nomor telepon, email, dan informasi kesehatan.\n\n

2. Ketentuan Penggunaan\n\n

Dengan menggunakan Aplikasi HealthEats, pengguna setuju untuk terikat dengan Term and Condition ini.\n\n
Pengguna bertanggung jawab untuk menjaga kerahasiaan akun dan kata sandinya.\n\n
Pengguna bertanggung jawab untuk memberikan informasi yang benar dan akurat kepada Aplikasi HealthEats.\n\n
Pengguna dilarang menggunakan Aplikasi HealthEats untuk tujuan yang melanggar hukum atau merugikan pihak lain.\n\n
\n
        3. Ketentuan Penyimpanan Data Pribadi
\n\n
Aplikasi HealthEats akan menyimpan Data Pribadi pengguna untuk tujuan meningkatkan pengalaman pengguna dan untuk memberikan layanan yang lebih baik.
\n\n
Aplikasi HealthEats akan mengambil langkah-langkah keamanan yang wajar untuk melindungi Data Pribadi pengguna.
\n\n
Pengguna dapat mengakses dan memperbarui Data Pribadinya melalui Aplikasi HealthEats.
\n\n
Pengguna dapat meminta untuk menghapus Data Pribadinya dari Aplikasi HealthEats dengan menghubungi [alamat email pengembang].
\n\n
4. Ketentuan Layanan Deteksi Penyakit
\n\n
Layanan deteksi penyakit di Aplikasi HealthEats menggunakan algoritma yang telah teruji dengan tingkat akurasi hingga 93%.
\n\n
Layanan deteksi penyakit di Aplikasi HealthEats tidak dimaksudkan untuk menggantikan diagnosis atau pengobatan oleh tenaga medis profesional.
\n\n
Jika pengguna mendapatkan hasil deteksi penyakit yang menunjukkan kemungkinan adanya penyakit tertentu, pengguna disarankan untuk berkonsultasi dengan tenaga medis profesional.
\n\n
5. Ketentuan Rekomendasi Makanan
\n\n
Aplikasi HealthEats juga akan memberikan beberapa rekomendasi makanan terhadap pengguna sesuai penyakit yang ia derita.
\n\n
Rekomendasi makanan tersebut dibuat berdasarkan algoritma yang telah teruji dan didukung oleh penelitian ilmiah.
\n\n
Namun, pengguna tetap disarankan untuk berkonsultasi dengan dokter dalam mengonsumsi makanan tersebut.
\n\n
6. Tindakan yang Dilarang
\n\n
Pengguna dilarang melakukan tindakan-tindakan berikut:
\n\n
Menggunakan Aplikasi HealthEats untuk tujuan yang melanggar hukum atau merugikan pihak lain.
\n\n
Melakukan aktivitas yang dapat mengganggu atau merusak Aplikasi HealthEats.
\n\n
Mengakses atau menggunakan Aplikasi HealthEats secara tidak sah.
\n\n
Meretas atau mencoba meretas Aplikasi HealthEats.
\n\n
Membagikan atau menyebarkan informasi yang tidak benar atau menyesatkan tentang Aplikasi HealthEats.
\n\n
7. Penyangkalan dan Batasan Tanggung Jawab
\n\n
Aplikasi HealthEats tidak bertanggung jawab atas segala kerugian atau kerusakan yang timbul dari penggunaan Aplikasi HealthEats, baik secara langsung maupun tidak langsung, termasuk namun tidak terbatas pada kerugian atau kerusakan yang disebabkan oleh kesalahan, kelalaian, atau kegagalan Aplikasi HealthEats.
\n\n
Aplikasi HealthEats tidak menjamin bahwa Aplikasi HealthEats akan selalu tersedia dan berfungsi tanpa gangguan.
\n\n
Aplikasi HealthEats berhak untuk mengubah atau memperbaharui Aplikasi HealthEats dari waktu ke waktu.
\n\n
8. Pemberitahuan
\n\n
Aplikasi HealthEats dapat mengirimkan pemberitahuan kepada pengguna melalui email, SMS, atau cara lain yang tersedia.
\n\n
Pengguna bertanggung jawab untuk membaca dan memahami pemberitahuan yang dikirimkan oleh Aplikasi HealthEats.
\n\n
Penutup
\n\n
Kami harap Term and Condition ini dapat memberikan informasi yang jelas dan lengkap kepada pengguna mengenai penggunaan Aplikasi HealthEats.

    </string>
    <string name="title_welcome_page">Welcome to Healtheast</string>
    <string name="message_welcome_page">Come on, check your health and get healthy food recipes</string>
    <string name="signup">Register</string>
    <string-array name="data_name">
        <item>Plecing Kangkung Lombok</item>D
        <item>Salad bayam</item>D
        <item>Salad Brokoli</item>D
        <item>Sayur bening Bayam Wortel</item>D
        <item>Sup Ikan Bandeng</item>D
        <item>Pindang Patin Nanas</item>D
        <item>Sop Wortel dan Kentang</item>D
        <item>Pakcoy Siram Kuah Jamur</item>D
        <item>Tahu Tuna Kukus</item>D
        <item>Pepes Ikan Gabus</item>D
    </string-array>
    <string-array name="data_description">
        <item>Pelecing kangkung merupakan kuliner khas masyarakat Lombok Nusa Tenggara Barat yang sejak zaman nenek moyang sampai sekarang masih merupakan makanan primadona Suku Sasak di Lombok Nusa Tenggara Barat.</item>D
        <item>Salad bayam adalah hidangan segar dan lezat yang menggabungkan bayam hijau yang bergizi dengan berbagai bahan lainnya untuk menciptakan paduan rasa dan tekstur yang menarik.</item>D
        <item>Salad yg praktis, cepat dan mengenyangkan juga sehat</item>D
        <item>Secara kasar, satu porsi sayur bening bayam (sekitar 1 cangkir atau 240 ml) mengandung sekitar 25-30 kalori, 2-3 gram protein, 4-5 gram karbohidrat, dan kurang dari 1 gram lemak. Selain itu, sayur bening bayam ini juga rendah sodium, sehingga cocok untuk orang yang mengontrol asupan garam dalam makanannya. Sementara dalam 100 gram sayur bayam mentah, terkandung sekitar 23 kalori. Ini berarti bahwa dalam 1 cangkir sayur bayam mentah (sekitar 28 gram), hanya terkandung sekitar 7 kalori.</item>D
        <item>Bandeng sangat mudah Anda dapatkan Di samping itu, harga ikan ini juga lebih terjangkau. Selain mineral, ikan ini juga dilengkapi dengan berbagai macam vitamin, seperti vitamin D, vitamin A, vitamin C, dan vitamin E.</item>D
        <item>Pindang patin nanas adalah hidangan yang lezat dan sehat, dirancang khusus untuk memenuhi kebutuhan penderita hipertensi. Dengan memadukan rasa asam segar nanas dan kesehatan ikan patin, hidangan ini menjadi pilihan yang baik untuk menjaga tekanan darah tetap terkendali</item>D
        <item>Kandungan betakaroten pada wortel sangat bagus untuk kesehatan penderita stroke. Karena mampu menurunkan kadar kolesterol jahat dan mencegah kerusakan sel-sel tubuh lebih lama lagi.</item>D
        <item>Jamur shimeji yang biasanya kita temui di supermarket dapat diolah menjadi makanan yang sangat bermanfaat bagi kesehatan, sifat antiateroskleoritk yang dimiliki dapat mengurangi pembetukan plak pada pembuluh arteri sehingga dapat mengurangi resiko stoke. selain itu jamur shimeji mudah untuk diolah dan dikreasikan keberbagai menu masakan.</item>D
        <item>Tuna adalah salah satu jenis ikan berlemak yang memiliki kandungan omega-3 yang tinggi, selain itu Tuna Tahu Kukus ini sangat mudah untuk dibuat.</item>D
        <item>Pepes ikan gabus tidak hanya lezat tetapi juga bergizi karena ikan gabus kaya akan protein dan omega-3. Selain itu, cara pengolahannya yang dikukus membuat pepes ikan gabus menjadi pilihan makanan yang lebih sehat karena tidak menggunakan minyak untuk memasaknya.</item>D
    </string-array>
</resources>