<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/welcome_text"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/logo_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logo_app"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="90dp"
                android:orientation="vertical"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textStyle="bold"
                android:textSize="15sp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/logo_app"
                app:layout_constraintBottom_toTopOf="@id/username"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="36dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="36dp"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_username">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundercorner"
                android:layout_marginTop="12dp"
                android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/title_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="36dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/username"
                app:layout_constraintBottom_toTopOf="@id/email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="36dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="36dp"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/roundercorner"
                android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/title_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="36dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintBottom_toTopOf="@id/password"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="36dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="36dp"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/roundercorner"
                android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_sign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/button"
                android:text="@string/sign_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"/>

            <TextView
                android:id="@+id/already_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="10dp"
                android:text="@string/have_account"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/go_to_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/click_here"
                android:textAlignment="center"
                android:textColor="@color/darker"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/already_login"
                app:layout_constraintTop_toBottomOf="@id/btn_sign"/>
            <ProgressBar
                android:id="@+id/loading_state"
                style="@android:style/Widget.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
        
</androidx.constraintlayout.widget.ConstraintLayout>