<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/group_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-67dp"
                android:layout_marginTop="-27dp"
                tools:ignore="MissingConstraints">

                <View
                    android:id="@+id/ellipse_13"
                    android:layout_width="158dp"
                    android:layout_height="145dp"
                    android:layout_marginStart="-60dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/ellipse_13_shape" />

                <View
                    android:id="@+id/ellipse_12"
                    android:layout_width="71dp"
                    android:layout_height="71dp"
                    android:layout_marginStart="-20dp"
                    android:layout_marginTop="99dp"
                    android:background="@drawable/ellipse_12_shape" />

            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/group_19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-67dp"
                android:layout_marginTop="-27dp"
                tools:ignore="MissingConstraints">

                <View
                    android:id="@+id/ellipse_14"
                    android:layout_width="158dp"
                    android:layout_height="145dp"
                    android:layout_marginStart="320dp"
                    android:layout_marginEnd="-60dp"
                    android:layout_marginTop="160dp"
                    android:background="@drawable/ellipse_13_shape" />

                <View
                    android:id="@+id/ellipse_15"
                    android:layout_width="71dp"
                    android:layout_height="71dp"
                    android:layout_marginStart="350dp"
                    android:layout_marginTop="250dp"
                    android:layout_marginEnd="-50dp"
                    android:background="@drawable/ellipse_12_shape" />

            </RelativeLayout>

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="left"
                android:alpha="0"
                tools:alpha="100"
                android:text="@string/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <TextView
                android:id="@+id/descText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:alpha="0"
                android:gravity="left"
                android:text="@string/description_login"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome_text"
                tools:alpha="100" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/email"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descText"
                tools:alpha="100"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTextView"
                app:startIconDrawable="@drawable/baseline_email_24"
                tools:alpha="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
                tools:alpha="100" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
                app:startIconDrawable="@drawable/baseline_lock_24"
                tools:alpha="100">

                <com.example.capstoneproject.view.PwCustomView
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submit_button_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:text="@string/login"
                android:alpha="0"
                tools:alpha="100"
                android:textAlignment="center"
                android:backgroundTint="@color/button"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/want_to_regis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="10dp"
                android:text="@string/move_to_regis"
                android:textAlignment="center"
                android:textSize="12sp"
                android:alpha="0"
                tools:alpha="100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submit_button_login"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/go_to_regis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/rectangle_23_color"
                android:text="@string/click_here_register"
                app:layout_constraintStart_toEndOf="@+id/want_to_regis"
                app:layout_constraintTop_toBottomOf="@id/submit_button_login"
                android:alpha="0"
                tools:alpha="100"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.4"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal2"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.1"
                app:layout_constraintStart_toStartOf="parent" />

            <RelativeLayout
                android:id="@+id/view_progressbar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0"
                android:background="@color/rectangle_23_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <ProgressBar
                    android:id="@+id/progressLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/loading_state"
                style="@android:style/Widget.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>